--- a/src/App.css
+++ b/src/App.css
@@ -758,7 +758,7 @@ body
   color: white;
   text-align: center;
   padding: 40px;
-  margin: 30px 30px 0 30px ;
+  margin: 30px ;
 }
 
 .newsletter-container h2 {
@@ -1131,4 +1131,176 @@ input, select {
   background-color: white;
   border: 1px solid #7b2eff;
   color: #7b2eff;
+}
+
+.contact-container
+{
+  background-color: white;
+}
+
+.contact-container hr
+{
+  margin: 20px auto;
+  width: 90%;
+  border: 1px solid #ddd;
+}
+
+.contact-details {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin-left: 150px;
+  padding: 20px;
+}
+
+.contact-info {
+  flex: 1;
+}
+
+.contact-info h2 {
+  font-size: 20px;
+  font-weight: 620;
+  margin-bottom: 40px;
+  margin-top: 50px;
+}
+
+.contact-info p {
+  margin: 5px 0;
+}
+
+.input-group1 input
+{
+  width: 250px;
+}
+
+.input-group1 textarea
+{
+  width: 530px;
+  height: 15vh;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+}
+
+#btn
+{
+  margin-top: 20px;
+}
+
+.contact-form
+{
+  max-width: 600px;
+  padding-right: 200px;
+  padding-top: 40px;
+  margin-bottom: 100px;
+}
+
+.contact-title
+{
+  font-size: 20px;
+}
+
+.contact-description
+{
+  margin-top: 40px;
+  color: black;
+  font-weight: lighter;
+}
+
+.help-container
+{
+  background-color: white;
+}
+
+.help-maintxt h1
+{
+  text-align: center;
+  padding: 50px 0;
+  font-weight: 600;
+}
+
+.faq-container {
+  max-width: 900px;
+  margin: auto;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  padding-bottom: 120px;
+}
+
+.faq-title {
+  text-align: center;
+  font-size: 28px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.faq-tabs {
+  display: flex;
+  gap: 20px;
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 20px;
+  margin-top: 30px;
+}
+
+.faq-tabs span {
+  cursor: pointer;
+  color: gray;
+  font-size: 14px;
+}
+
+.faq-tabs .active-tab {
+  color: #7b2eff;
+  font-weight: bold;
+}
+
+.faq-list {
+  margin-top: 30px;
+}
+
+.faq-item {
+  padding: 15px 0;
+  border-bottom: 1px solid #ddd;
+}
+
+.faq-question {
+  font-size: 18px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.faq-question h5{
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.faq-icon {
+  font-size: 14px;
+  color: gray;
+}
+
+.faq-answer {
+  margin-top: 10px;
+  font-size: 13px;
+  color: #444;
+}
+
+.faq-social-icons {
+  display: flex;
+  gap: 15px;
+  margin-top: 10px;
+}
+
+.icon {
+  font-size: 20px;
+  color: black;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.icon:hover {
+  color: purple;
 }
