--- a/src/App.css
+++ b/src/App.css
@@ -1304,3 +1304,134 @@ input, select {
 .icon:hover {
   color: purple;
 }
+
+.shop-container {
+  padding: 20px;
+  background-color: #E8E8E8;
+}
+
+.shop-two {
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 10px;
+}
+
+.shop-title {
+  font-weight: 600;
+  margin-bottom: 60px;
+
+}
+
+.shop-layout {
+  display: flex;
+  gap: 20px;
+}
+
+.sidebar {
+  width: 220px;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.sidebar h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar ul li {
+  padding: 8px 0;
+  cursor: pointer;
+  color: #333;
+}
+
+.sidebar ul .active {
+  font-weight: bold;
+  color: #000;
+}
+
+.product-section {
+  flex-grow: 1;
+}
+
+.products-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  font-size: 16px;
+}
+
+.sort-dropdown {
+  padding: 5px;
+  border-radius: 5px;
+  background-color: #E8E8E8;
+  border-bottom: none;
+}
+
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+.product-card {
+  background: #fff;
+  padding: 15px;
+  border-radius: 10px;
+  position: relative;
+  transition: transform 0.3s ease-in-out;
+}
+
+.product-card:hover {
+  transform: scale(1.05);
+}
+
+.sale-badge {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background: red;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.product-image {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  object-fit: cover;
+}
+
+.product-details {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.product-name {
+  font-size: 16px;
+  color: #333;
+}
+
+.product-price {
+  font-size: 18px;
+  margin-top: 5px;
+}
+
+.old-price {
+  text-decoration: line-through;
+  color: gray;
+  margin-right: 5px;
+}
+
+.new-price {
+  font-weight: bold;
+  color: #000;
+}
+
